# metafold-python

./: .buildinfo  .editorconfig  .gitignore  .gitlab-ci.yml  LICENSE  README.md  genindex.html  index.html  init.html  metafold.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  search.html  searchindex.js
.github/workflows/: python-docs.yml  python-package.yml  python-publish.yml
_sources/: index.rst.txt  init.rst.txt  metafold.rst.txt
contrib/: draw_graph.py
docs/: conf.py  index.rst  init.rst  make.bat  metafold.rst  modules.rst
examples/: beam_lattice_metrics.py  lattice_infill.py  lattice_metrics.py  lattice_metrics_parallel.py  run_workflow.py  surface_lattice_metrics.py  surface_lattice_metrics_parallel.py
metafold/: __init__.py  api.py  assets.py  auth.py  client.py  exceptions.py  func.py  func.py.in  func_types.py  jobs.py  materials.py  nx.py  projects.py  utils.py  workflows.py
metafold/simulation/: __init__.py  compression_experiment.py  compression_simulation.py  run_experiment.py
tests/: conftest.py  test_assets.py  test_compession_experiment.py  test_compression_simulation.py  test_func.py  test_jobs.py  test_materials.py  test_projects.py  test_run_experiment.py  test_shear_simulation.py  test_utils.py  test_workflows.py
workflows/: export-mesh.yml  sample-mesh.yml
