[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "metafold"
version = "0.11.0"
authors = [
    {name = "Metafold 3D", email = "info@metafold3d.com"},
]
dependencies = [
    "attrs~=23.2",
    "auth0-python~=4.7",
    "numpy~=2.0",
    "requests~=2.31",
    "scipy~=1.11",
]
readme = "README.md"
license = {file = "LICENSE"}
description = "Metafold SDK for Python"
requires-python = ">=3.10"
keywords = ["metafold", "api", "sdk", "implicit geometry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://www.metafold3d.com/"
Documentation = "https://metafold3d.github.io/metafold-python/"
Repository = "https://github.com/Metafold3d/metafold-python.git"
Issues = "https://github.com/Metafold3d/metafold-python/issues"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "requests-toolbelt>=1.0.0",
    "ruff>=0.14.13",
    "sphinx~=7.2",
    "sphinx-rtd-theme~=2.0",
    "types-requests>=2.32.4.20260107",
]

[tool.setuptools]
packages = ["metafold"]

[tool.ruff.lint]
select = ["NPY201"]

[tool.pytest.ini_options]
pythonpath = "."
junit_suite_name = "metafold"
